--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(CHIP_8_Emulator)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES src/main.cpp)
+set(SOURCE_FILES src/main.cpp src/chip8.cpp src/chip8.h)
 add_executable(chip8 ${SOURCE_FILES})
 
 INCLUDE(FindPkgConfig)
